Stocks api-first migration
