# restful-af-sv/src/main/java/org/example/restful/adapter/rest/v1/controller/StockControllerImpl.java
@@ -1,26 +1,21 @@
 package org.example.restful.adapter.rest.v1.controller;
 
 import org.example.restful.adapter.rest.HateoasUtils;
+import org.example.restful.adapter.rest.v1.converter.JsonPatchRequestToJsonPatchConverter;
 import org.example.restful.adapter.rest.v1.converter.StockRequestToStockConverter;
 import org.example.restful.adapter.rest.v1.converter.StockToStockResponseConverter;
 import org.example.restful.domain.Stock;
-import org.example.restful.port.rest.v1.StockController;
-import org.example.restful.port.rest.v1.api.model.StockRequest;
-import org.example.restful.port.rest.v1.api.model.StockResponse;
 import org.example.restful.service.StockService;
+import org.openapitools.api.StocksApi;
+import org.openapitools.model.JsonPatchRequest;
+import org.openapitools.model.StockRequest;
+import org.openapitools.model.StockResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.hateoas.server.mvc.WebMvcLinkBuilder;
 import org.springframework.http.CacheControl;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PatchMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -33,35 +28,30 @@ import java.util.Map;
 import java.util.concurrent.TimeUnit;
 
 import javax.annotation.security.RolesAllowed;
-import javax.validation.Valid;
 
 import lombok.extern.slf4j.Slf4j;
 
 import static org.example.restful.constant.Roles.ADMIN;
 import static org.example.restful.constant.Roles.USER;
-import static org.example.restful.constant.UrlConstants.BASE_PATH_V1;
-import static org.example.restful.constant.UrlConstants.ISIN_PATH_PARAM;
-import static org.example.restful.constant.UrlConstants.STOCKS_SUBPATH;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 import static org.springframework.web.bind.annotation.RequestMethod.GET;
 import static org.springframework.web.bind.annotation.RequestMethod.PATCH;
 
 @RestController
-@RequestMapping(BASE_PATH_V1)
 @Slf4j
-public class StockControllerImpl extends HateoasUtils<StockResponse> implements StockController {
+public class StockControllerImpl extends HateoasUtils implements StocksApi {
 
   @Autowired private StockService stockService;
 
   @Autowired private StockToStockResponseConverter responseConverter;
   @Autowired private StockRequestToStockConverter requestConverter;
+  @Autowired private JsonPatchRequestToJsonPatchConverter patchAdapter;
 
   @Override
   @RolesAllowed({USER, ADMIN})
   @Cacheable(value = "allstocks")
-  @GetMapping(value = STOCKS_SUBPATH, produces = MediaType.APPLICATION_JSON_VALUE)
-  public ResponseEntity<List<StockResponse>> getAllStocks() {
+  public ResponseEntity<List<StockResponse>> getStocks() {
     log.info("Getting all stocks");
 
     final List<StockResponse> responses = responseConverter.convert(stockService.getAllStocks());
@@ -74,36 +64,27 @@ public class StockControllerImpl extends HateoasUtils<StockResponse> implements 
 
   @Override
   @RolesAllowed(ADMIN)
-  @PostMapping(
-      value = STOCKS_SUBPATH,
-      consumes = MediaType.APPLICATION_JSON_VALUE,
-      produces = MediaType.APPLICATION_JSON_VALUE)
-  public ResponseEntity<StockResponse> createStock(
-      @Valid @RequestBody final StockRequest stockRequest) {
+  public ResponseEntity<StockResponse> createStock(final StockRequest stockRequest) {
     log.info("Creating stock {}", stockRequest.getIsin());
 
     final Stock stock = stockService.createStock(requestConverter.convert(stockRequest));
 
     final StockResponse response = responseConverter.convert(stock);
-
-    applyHATEOAS(response, getHateoasMap(response, List.of(GET, PATCH)));
+    response.setLinks(responseConverter.convertLinks(getHateoasMap(response, List.of(GET, PATCH))));
 
     return ResponseEntity.status(HttpStatus.CREATED).body(response);
   }
 
   @Override
   @RolesAllowed(ADMIN)
-  @PatchMapping(
-      value = STOCKS_SUBPATH + ISIN_PATH_PARAM,
-      consumes = "application/json-patch+json",
-      produces = MediaType.APPLICATION_JSON_VALUE)
-  public ResponseEntity<StockResponse> modifyStock(
-      @PathVariable final String isin, @RequestBody final JsonPatch patch) {
+  public ResponseEntity<StockResponse> updateStock(
+      final String isin, final JsonPatchRequest patchRequest) {
     log.info("Modifying stock {}", isin);
 
-    final StockResponse response = responseConverter.convert(stockService.updateStock(isin, patch));
+    final JsonPatch patch = this.patchAdapter.convert(patchRequest);
 
-    applyHATEOAS(response, getHateoasMap(response, List.of(GET, PATCH)));
+    final StockResponse response = responseConverter.convert(stockService.updateStock(isin, patch));
+    response.setLinks(responseConverter.convertLinks(getHateoasMap(response, List.of(GET, PATCH))));
 
     return ResponseEntity.status(HttpStatus.OK).body(response);
   }
@@ -115,11 +96,11 @@ public class StockControllerImpl extends HateoasUtils<StockResponse> implements 
         new HashMap<RequestMethod, WebMvcLinkBuilder>();
     try {
       if (includedLinks.contains(RequestMethod.GET)) {
-        hateoasMap.put(GET, linkTo(methodOn(this.getClass()).getAllStocks()));
+        hateoasMap.put(GET, linkTo(methodOn(this.getClass()).getStocks()));
       }
       if (includedLinks.contains(RequestMethod.PATCH)) {
         hateoasMap.put(
-            PATCH, linkTo(methodOn(this.getClass()).modifyStock(response.getIsin(), null)));
+            PATCH, linkTo(methodOn(this.getClass()).updateStock(response.getIsin(), null)));
       }
     } catch (Exception ex) {
       log.error("Error during hateoasMap construction: {}", ex.getMessage());
