# restful-af-sv/src/main/java/org/example/restful/adapter/rest/v1/converter/StockToStockResponseConverter.java
@@ -1,13 +1,17 @@
 package org.example.restful.adapter.rest.v1.converter;
 
+import org.example.restful.domain.Stock;
+import org.openapitools.model.StockResponse;
+import org.springframework.core.convert.converter.Converter;
+import org.springframework.hateoas.Link;
+import org.springframework.hateoas.server.mvc.WebMvcLinkBuilder;
+import org.springframework.stereotype.Component;
+import org.springframework.web.bind.annotation.RequestMethod;
+
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
-
-import org.example.restful.domain.Stock;
-import org.example.restful.port.rest.v1.api.model.StockResponse;
-import org.springframework.core.convert.converter.Converter;
-import org.springframework.stereotype.Component;
 
 @Component
 public class StockToStockResponseConverter implements Converter<Stock, StockResponse> {
@@ -32,5 +36,11 @@ public class StockToStockResponseConverter implements Converter<Stock, StockResp
     } else {
       return domains.stream().map(p -> convert(p)).collect(Collectors.toList());
     }
+  }
+
+  public Map<String, String> convertLinks(Map<RequestMethod, WebMvcLinkBuilder> hateoasMap) {
+    return hateoasMap.entrySet().stream()
+        .map(m -> m.getValue().withRel(m.getKey().name().toLowerCase()))
+        .collect(Collectors.toMap(l -> l.getRel().toString(), Link::getHref));
   }
 }
